--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "Namaz vakitlerini gösteren bir uygulama."
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
 
-version: 1.0.0+1  # Semantic Versioning: MAJOR.MINOR.PATCH+buildNumber
+version: 1.1.0+2  # Semantic Versioning: MAJOR.MINOR.PATCH+buildNumber
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.1.2
   intl: ^0.19.0
   connectivity_plus: ^5.0.2
+  home_widget: ^0.7.0
 
 dev_dependencies:
   flutter_test:
